Updates of MPPT and flashing documentation, RPi CAN gateway added

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <div class="page__footer-follow">
+  <ul style="float:right">
+    <li><div style="float:right"><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode" target="_blank"><img src="/images/cc-by-sa.png" align="right"/></a></div></li>
+  </ul>
   <ul class="social-icons">
     {% if site.data.ui-text[site.locale].follow_label %}
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
