--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,9 @@
     {% if site.author.bitbucket %}
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fa fa-fw fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
     {% endif %}
+    {% if site.author.reddit %}
+      <li><a href="https://www.reddit.com/r/{{ site.author.reddit }}"><i class="fa fa-fw fa-reddit" aria-hidden="true"></i> Reddit</a></li>
+    {% endif %}
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | absolute_url }}{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
   </ul>
 </div>
