add link to edit page source on github (Wiki style)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
 
     {{ content }}
 
+    {% include edit-source.html %}
+
     <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
